test/2/scope/circular-def-do.err
test/2/scope/circular-def-do.ploy:1:7-8: scope error: expected a value; `x` refers to a forward declaration.
| x = { x }
        ~
